--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -72,6 +72,9 @@
       width: 70%
     &-60
       width: 80%
+  .footer
+    &__wrap
+      margin-top: 0 
 @media screen and ( max-width: 768px )
   .section
     &-title
@@ -89,7 +92,7 @@
     &-40
       width: 90%
     &-60
-      width: 100%
+      width: 100%  
 @media screen and ( max-width: 576px )
   .contacts
     &__phone
